fixed all-galleries page on ie11

--- a/project/styles/all-galleries-style.scss
+++ b/project/styles/all-galleries-style.scss
@@ -43,7 +43,12 @@
 
 /*IE10+ CSS here*/
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    @media (max-width: 520px) {
+    header {
+        height: 0;
+        padding-bottom: 317px;
+    }
+    
+    @media (max-width: 768px) {
         header {
             height: 0;
             padding-bottom: 100px;
